<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <POU Name="FB_Reset" Id="{899b01f2-f2a5-415e-96f0-f718ca072402}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_Reset
VAR_IN_OUT
	stAxis 	 	: ARRAY [GVL.cXP .. GVL.cXM] OF ST_AxisGroup;	
	bResetting	: BOOL;
	bResetEntry : BOOL;
END_VAR
VAR
	nCurrentState 	: INT;
	nNextState		: INT := 100;
	a,b,c,d,e : INT;
	fbResetTimer	: TON ;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[IF bResetEntry THEN
	nNextState := 50;
	bResetEntry := FALSE;
END_IF

nCurrentState := nNextState;
CASE nCurrentstate OF
	
	50:
		stAxis[GVL.cXP].mcReset(axis:=stAxis[GVL.cXP].axisRef, Execute:=TRUE);
		stAxis[GVL.cXM].mcReset(axis:=stAxis[GVL.cXM].axisRef, Execute:=TRUE);
		IF stAxis[GVL.cXP].mcReset.Done AND stAxis[GVL.cXM].mcReset.Done THEN
			stAxis[GVL.cXP].mcReset(axis:=stAxis[GVL.cXP].axisRef, Execute:=FALSE);
			stAxis[GVL.cXM].mcReset(axis:=stAxis[GVL.cXM].axisRef, Execute:=FALSE);
			nNextState := 100;
		END_IF
		e := e+1;
		
	100:
		stAxis[GVL.cXP].mcStop(Axis:=stAxis[GVL.cXP].axisRef, Execute:=FALSE);
		stAxis[GVL.cXM].mcStop(Axis:=stAxis[GVL.cXM].axisRef, Execute:=FALSE);
		fbResetTimer(IN:=TRUE, PT:=T#100MS);
		IF FBResetTimer.Q THEN
			fbResetTimer(IN:=FALSE);
			nNextState:=200;
		END_IF
		//nNextState := 200;
		a := a+1;
		
	200:
		stAxis[GVL.cXP].mcStop(Axis:=stAxis[GVL.cXP].axisRef, Execute:=TRUE);
		stAxis[GVL.cXM].mcStop(Axis:=stAxis[GVL.cXM].axisRef, Execute:=TRUE);
		IF stAxis[GVL.cXP].mcStop.Done AND stAxis[GVL.cXM].mcStop.Done THEN 
			stAxis[GVL.cXP].mcStop(Axis:=stAxis[GVL.cXP].axisRef, Execute:=FALSE);
			stAxis[GVL.cXM].mcStop(Axis:=stAxis[GVL.cXM].axisRef, Execute:=FALSE);
			nNextState := 300;
			b := b+1;
		END_IF
		c := c+1;
	
	300:
		stAxis[GVL.cXP].mcMoveAbs(Axis:=stAxis[GVL.cXP].axisRef, Execute:=FALSE);
		stAxis[GVL.cXM].mcMoveAbs(Axis:=stAxis[GVL.cXM].axisRef, Execute:=FALSE);
		stAxis[GVL.cXP].mcMoveRel(Axis:=stAxis[GVL.cXP].axisRef, Execute:=FALSE);
		stAxis[GVL.cXM].mcMoveRel(Axis:=stAxis[GVL.cXM].axisRef, Execute:=FALSE);
		stAxis[GVL.cXP].mcJog(Axis:=stAxis[GVL.cXP].axisRef, JogForward:=FALSE, JogBackwards:=FALSE);
		stAxis[GVL.cXM].mcJog(Axis:=stAxis[GVL.cXM].axisRef, JogForward:=FALSE, JogBackwards:=FALSE);
		nNextState := 400;
		
	400:
		stAxis[GVL.cXP].mcReset(axis:=stAxis[GVL.cXP].axisRef, Execute:=TRUE);
		stAxis[GVL.cXM].mcReset(axis:=stAxis[GVL.cXM].axisRef, Execute:=TRUE);
		IF stAxis[GVL.cXP].mcReset.Done AND stAxis[GVL.cXM].mcReset.Done THEN
			stAxis[GVL.cXP].mcReset(axis:=stAxis[GVL.cXP].axisRef, Execute:=FALSE);
			stAxis[GVL.cXM].mcReset(axis:=stAxis[GVL.cXM].axisRef, Execute:=FALSE);
			bResetting := FALSE;
			nNextState := 100;
		END_IF
		d := d+1;

END_CASE


]]></ST>
    </Implementation>
    <LineIds Name="FB_Reset">
      <LineId Id="177" Count="0" />
      <LineId Id="179" Count="0" />
      <LineId Id="178" Count="0" />
      <LineId Id="115" Count="0" />
      <LineId Id="146" Count="0" />
      <LineId Id="36" Count="0" />
      <LineId Id="197" Count="6" />
      <LineId Id="205" Count="3" />
      <LineId Id="82" Count="0" />
      <LineId Id="169" Count="1" />
      <LineId Id="192" Count="2" />
      <LineId Id="196" Count="0" />
      <LineId Id="195" Count="0" />
      <LineId Id="172" Count="1" />
      <LineId Id="171" Count="0" />
      <LineId Id="85" Count="0" />
      <LineId Id="104" Count="0" />
      <LineId Id="90" Count="1" />
      <LineId Id="93" Count="0" />
      <LineId Id="130" Count="1" />
      <LineId Id="160" Count="0" />
      <LineId Id="102" Count="0" />
      <LineId Id="174" Count="0" />
      <LineId Id="103" Count="0" />
      <LineId Id="105" Count="0" />
      <LineId Id="116" Count="0" />
      <LineId Id="106" Count="2" />
      <LineId Id="162" Count="1" />
      <LineId Id="88" Count="0" />
      <LineId Id="117" Count="4" />
      <LineId Id="166" Count="1" />
      <LineId Id="125" Count="0" />
      <LineId Id="129" Count="0" />
      <LineId Id="126" Count="0" />
      <LineId Id="175" Count="0" />
      <LineId Id="127" Count="0" />
      <LineId Id="87" Count="0" />
      <LineId Id="86" Count="0" />
      <LineId Id="69" Count="1" />
      <LineId Id="53" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>